force-app/main/default/src/objects/HealthCloudGA__IndustriesAppConfig__c/HealthCloudGA__IndustriesAppConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines basic Industries configurations.</description>
    <label>Industries Application Config</label>
</CustomObject>