force-app/main/default/src/objects/HealthCloudGA__IndustriesAppConfig__c/fields/HealthCloudGA__AppName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AppName__c</fullName>
    <description>Reserved for Salesforce internal use</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>