force-app/main/default/src/objects/HealthCloudGA__IndustriesAppConfig__c/fields/HealthCloudGA__AutocreateIndividualAccount__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AutocreateIndividualAccount__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Creates the account part of the Individual when creating a contact</description>
    <label>Individual Account Creation from Contact</label>
    <type>Checkbox</type>
</CustomField>