force-app/main/default/src/objects/HealthCloudGA__IndustriesAppConfig__c/fields/HealthCloudGA__AutoCreateInverseRole__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AutoCreateInverseRole__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reserved for Salesforce internal use</description>
    <label>Create Inverse (Salesforce only)</label>
    <type>Checkbox</type>
</CustomField>