force-app/main/default/src/objects/HealthCloudGA__IndustriesAppConfig__c/fields/HealthCloudGA__DefaultIndividualType__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DefaultIndividualType__c</fullName>
    <defaultValue>&quot;Individual&quot;</defaultValue>
    <description>Reserved for Salesforce internal use</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Individual Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>