force-app/main/default/src/objects/HealthCloudGA__IndustriesAppConfig__c/fields/HealthCloudGA__MultipleRelationshipGroups__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MultipleRelationshipGroups__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables a contact to be a member or related member of multiple relationship groups.</description>
    <label>Multiple Relationship Groups</label>
    <type>Checkbox</type>
</CustomField>