force-app/main/default/src/objects/HealthCloudGA__IndustriesAppConfig__c/fields/HealthCloudGA__SyncIndividualSystemFields__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SyncIndividualSystemFields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Account and Contact system fields are kept in sync when an insert is performed on either entity.</description>
    <inlineHelpText>Sync Account and Contact fields when records are created in the individual object model.</inlineHelpText>
    <label>Sync Individual System Fields</label>
    <type>Checkbox</type>
</CustomField>